Chapter 08/allow-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: web-client
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
        - protocol: UDP
          port: 53

# This NetworkPolicy allows incoming traffic to Pods labeled app: nginx from Pods labeled app: web-client on TCP ports 80 and 443, and UDP port 53.

# For more information on configuring network policies in GKE, refer to the official documentation: https://kubernetes.io/docs/concepts/services-networking/network-policies/
